# another_ssimulacra2_cli

./: Cargo.toml  README.md  dockerfile
.github/workflows/: rust.yml
src/: converters.rs  enums.rs  main.rs  structs.rs
