[package]
name = "as2c"
version = "0.1.1"
edition = "2021"
categories = [
    "command-line-utilities",
    "multimedia::images",
    "multimedia::encoding",
    "multimedia",
]
keywords = ["ssim", "ssimulacra2", "quality", "vmaf", "Butteraugli"]
description = "Another ssimulacra2 cli"
repository = "https://github.com/rust-av/ssimulacra2_bin"
homepage = "https://github.com/rust-av/ssimulacra2_bin"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.25"
image = "0.24.4"
num_cpus = "1.13.1"
progress_bar = "1.0.3"
ssimulacra2 = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
yuvxyb = "0.3.0"

[profile.release]
lto = "thin"
codegen-units = 1

# For perf testing reasons
[profile.release-full-lto]
inherits = "release"
lto = true
